syntax = "proto3";

package foo.v1;

option go_package = "foov1";
option java_multiple_files = true;
option java_outer_classname = "FooProto";
option java_package = "com.foo.v1";

message One {}
